<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pt.paradigmshift.babel</groupId>
    <artifactId>babel-core</artifactId>
    <version>1.0.0</version>
    <name>Babel Core</name>
    <description>
        Distributed protocol framework for swarm and peer-to-peer systems.
        Provides the protocol runtime, event system, and timer infrastructure
        for composing GenericProtocol instances in the Babel framework.
    </description>
    <url>https://www.paradigmshift.pt</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>17</source>
                    <doclint>none</doclint>
                    <quiet>true</quiet>
                    <windowtitle>Babel Core API</windowtitle>
                    <doctitle>Babel Core ${project.version} API</doctitle>
                    <bottom>
                        Copyright &amp;copy; 2026 ParadigmShift. All rights reserved.
                        See LICENSE for terms of use.
                    </bottom>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>paradigmshift-repository</id>
            <url>https://maven.paradigmshift.pt/releases</url>
        </repository>
        <snapshotRepository>
            <id>paradigmshift-repository</id>
            <url>https://maven.paradigmshift.pt/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>paradigmshift-repository</id>
            <name>ParadigmShift Repository</name>
            <url>https://maven.paradigmshift.pt/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>pt.paradigmshift.babel</groupId>
            <artifactId>babel-network-layer</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>
    </dependencies>

</project>
